src/nodes/snapshots/flux__nodes__custom_shader__tests__no_input_shader_runs.snap
---
source: src/nodes/custom_shader.rs
expression: stats
---
32x32
mean  R=193.0 G=219.0 B=147.0 A=255.0
range R=193-193 G=219-219 B=147-147 A=255-255
nonblack 1024/1024
